<resources>
    <string name="app_name">dndplus</string>
    <string name="hp_text">HP</string>
    <string name="food_text">Еда</string>
    <string name="power">Сила</string>
    <string name="agility_text">Ловкость</string>
    <string name="body_text">Телосложение</string>
    <string name="intellect_text">Интеллект</string>
    <string name="wisdom_text">Мудрость</string>
    <string name="charisma">Харизма</string>
    <string name="create_text">Создать</string>
    <string name="level_text">уровень</string>
    <string name="exp">опыт</string>
    <string name="KD">КД</string>
    <string name="speed">скорость</string>
    <string name="nameperson">имя персонажа</string>
    <string name="save">Сохранить</string>
    <string name="rassa">расса</string>
    <string name="classtx">класс</string>
    <string name="classtext">класс</string>
    <string name="history">описание и предистория</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_started">STARTED</string>
    <string name="textname">Your name</string>
    <string name="action_sign_up">регистрация</string>
    <string name="organizator">организатор</string>
    <string name="mypers">мой персонаж</string>
    <string name="menu">Меню</string>


</resources>
