<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress_sign_up"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <ImageView
        android:id="@+id/LoginIm"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="2"
        android:contentDescription="TODO"
        android:gravity="center_horizontal"
        android:paddingTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginim" />

    <LinearLayout
        android:id="@+id/login_form_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/LoginIm"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LoginIm"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="315dp">


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </android.support.design.widget.TextInputLayout>

        <AutoCompleteTextView
            android:id="@+id/user_name_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/textname"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/BUTTON1"
            android:textStyle="italic" />

        <AutoCompleteTextView
            android:id="@+id/email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/BUTTON1"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/BUTTON1"
            android:textStyle="italic" />

        <Switch
            android:id="@+id/switch_organizator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/organizator"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/BUTTON1"
            android:text="@string/action_sign_up"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>